# LibCMakeTemplate

./: .gitignore  CMakeLists.txt  readme.md
cmake/: my_math-config.cmake.in
include/my_math/: my_math.h
src/: CMakeLists.txt  my_math.cpp
src/include/my_add/: my_add.h
src/include/my_sub/: my_sub.h
src/my_add/: CMakeLists.txt  my_add.cpp
src/my_sub/: CMakeLists.txt  my_sub.cpp
test/: CMakeLists.txt  test.cpp
